--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
             <version>1.16.20</version>
         </dependency>
 
+        <!--json转换工具-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.41</version>
+        </dependency>
+
     </dependencies>
 
     <build>
